2007-01-17  Jens Granseuer <jensgr@gmx.net>

	Fixes #395539

	* gnome-mouse-properties.c (read_cursor_font, populate_tree_model,
	setup_dialog, dialog_response_cb, main): fixed memory leaks.

2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>

	Fixes #336286

	* gnome-mouse-properties.c (main): switched from popt to GOptionContext.

2006-10-16  Rodrigo Moya <rodrigo@novell.com>

	Fixes #163690

	* gnome-mouse-properties.glade: reordered the widgets for A11Y. Patch
	from Sven Herzberg  <herzi@gnome-de.org>.

2006-08-16  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: also display the default theme (though
	without a preview for technical reasons); fixes bug #322514

2006-07-24  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: use ngettext() correctly

2006-07-24  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: fix the non-xcursor case for solaris;
	closes: #319125 (based upon patch from Glynn Foster)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-mouse.desktop.in.in:
	don't list the Application category, list the HardwareSettings one,
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-06-11  Darren Kenny <darren.kenny@sun.com>

	Fixes #340003

	* gnome-mouse-properties.c (cursor_font_changed): if no cursor font
	set in GConf, just unselect and return.

2006-02-14  Anilkumar Bacheli <anilkumar.bacheli@wipro.com>

	Fixes #330588

	* gnome-mouse-properties.glade: Modified the Slider value label to
	"milliseconds" instead of "microseconds".

	* gnome-mouse-properties.c: Use ngettext() to get the correct plural
	form of the message. Also changed so that the slider label is in
	"milliseconds"

2006-01-28  Anilkumar Bacheli <anilkumar.bacheli@wipro.com>

	Fixes #154769

	* gnome-mouse-properties.glade: Modified the glade file so that
	context information for the slider is available to screen reader.
	Also, modified the Slider value label to "microseconds" instead of