@@ -1,3 +1,8 @@
+2007-02-09  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-mouse-properties.c: (create_dialog), (main): remove some dead
+	code, and don't crash if the glade file is not available
+
 2007-01-17  Jens Granseuer <jensgr@gmx.net>
 
 	Fixes #395539
